refactor(java): 安全、规范与性能优化